--- a/backend/package.json
+++ b/backend/package.json
@@ -14,9 +14,8 @@
     "express": "^4.17.1",
     "knex": "^0.20.13",
     "knext": "^0.1.0",
+    "nodemon": "^2.0.2",
     "sqlite3": "^4.1.1"
   },
-  "devDependencies": {
-    "nodemon": "^2.0.2"
-  }
+  "devDependencies": {}
 }
