--- a/backend/package.json
+++ b/backend/package.json
@@ -10,17 +10,17 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "celebrate": "^12.0.1",
+    "celebrate": "^15.0.3",
     "cors": "^2.8.5",
     "cross-env": "^7.0.2",
     "express": "^4.17.1",
-    "knex": "^0.20.13",
+    "knex": "^3.1.0",
     "knext": "^0.1.0",
-    "nodemon": "^2.0.2",
-    "sqlite3": "^4.1.1"
+    "nodemon": "^3.1.9",
+    "sqlite3": "^5.1.7"
   },
   "devDependencies": {
-    "supertest": "^4.0.2",
-    "jest": "^25.2.3"
+    "jest": "^29.7.0",
+    "supertest": "^7.1.0"
   }
 }
